--- a/views/index.html
+++ b/views/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Blank</title>
+    <title>Anton Pugach's API</title>
 
     <!-- STYLESHEETS -->
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
@@ -20,8 +20,21 @@
     <div class="container">
       <div class="row">
         <div class="col-md-8 col-md-offset-2">
-          <h1>Under Construction</h1>
-          <h4><a href="/api">Read My API Documentation</a></h4>
+            <h4><a href="/api">Read My API Documentation</a></h4>
+            <form class="form-inline" id="newVentureForm">
+              <div class="form-group">
+                <label for="name">Name</label>
+                <input type="text" class="form-control" name="name" placeholder="Venture Name">
+              </div>
+              <div class="form-group">
+                <label for="title">Description</label>
+                <input type="text" class="form-control" name="description" placeholder="Venture Description">
+              </div>
+              <button type="submit" class="btn btn-default">Create venture</button>
+            </form>
+            <div id='ventureTarget'>
+            </div>
+          </div>
         </div>
       </div>
     </div>
