--- a/views/index.html
+++ b/views/index.html
@@ -21,7 +21,7 @@
       <div class="row">
         <div class="col-md-8 col-md-offset-2">
             <h4><a href="/api">Read My API Documentation</a></h4>
-            <form class="form-inline" id="newVentureForm">
+            <form class="form-inline">
               <div class="form-group">
                 <label for="name">Name</label>
                 <input type="text" class="form-control" name="name" placeholder="Venture Name">
