--- a/views/index.html
+++ b/views/index.html
@@ -23,12 +23,12 @@
             <h4><a href="/api">Read My API Documentation</a></h4>
             <form class="form-inline">
               <div class="form-group">
-                <label for="name">Name</label>
-                <input type="text" class="form-control" name="name" placeholder="Venture Name">
+                <label for="title">Name</label>
+                <input type="text" class="form-control" name="title" id="title" placeholder="Venture Name">
               </div>
               <div class="form-group">
-                <label for="title">Description</label>
-                <input type="text" class="form-control" name="description" placeholder="Venture Description">
+                <label for="description">Description</label>
+                <input type="text" class="form-control" name="description" id="description" placeholder="Venture Description">
               </div>
               <button type="submit" class="btn btn-default">Create venture</button>
             </form>
